--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  profiles:
+    active: local
+    include:
+      - jwt
+      - oauth2
 
 logging:
   level:
