--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,33 @@
 spring:
   h2:
     console:
-      enabled: true
+      enabled : true
       path: /h2-console
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/test
+    username : sa
+    password:
   jpa:
-    show-sql: true
-    generate-ddl: true
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
-        show-sql: true
-        ddl-auto: create
         format_sql: true
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
   profiles:
     active: local
     include:
       - jwt
       - oauth2
-
+cloud:
+  aws:
+    s3:
+      bucket: haru4cut
+      stack.auto: false
+    region.static: ap-northeast-2
+    credentials:
+      accessKey: ${{S3_ACCESS_KEY}}
+      secretKey: ${{S3_SECRET_KEY}}
 logging:
   level:
-    org.hibernate: info
     org.hibernate.SQL: debug
-    org.hibernate.type: trace
