--- a/src/main/resources/application-jwt.yml
+++ b/src/main/resources/application-jwt.yml
@@ -1,3 +1,3 @@
 jwt:
-  secretKey: ${{JWT_SECRET_KEY}}
-  expiration: ${{EXPIRATION_TIME}}
+  secretKey: ${JWT_SECRET_KEY}
+  expiration: ${EXPIRATION_TIME}
