--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,6 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-	//implementation 'com.theokanning.openai-gpt3-java:client:0.18.2'
 	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
 	implementation 'com.theokanning.openai-gpt3-java:api:0.18.2'
 
@@ -43,7 +42,7 @@ dependencies {
 	implementation 'sh.platform:config:2.2.3'
 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
