--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     username : junseo
     password: Haru4cut!
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: create
     properties:
