--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
 	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
 	implementation 'com.theokanning.openai-gpt3-java:api:0.18.2'
 
