chore : AWS 에러해결 위한 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,7 @@ cloud:
 logging:
   level:
     org.hibernate.SQL: debug
+
+jwt:
+  secret: "${{ secrets.JWT_SECRET_KEY }}"
+  expiration: "${{ secrets.EXPIRATION_TIME }}"
