--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,13 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+	implementation 'com.theokanning.openai-gpt3-java:client:0.18.2'
 	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
 	implementation 'com.theokanning.openai-gpt3-java:api:0.18.2'
+
+	implementation 'com.stripe:stripe-java:22.13.0'
+	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+	implementation 'sh.platform:config:2.2.3'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
