--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,4 +24,5 @@ jobs:
           pkill -f "java -jar haru4cut-0.0.1-SNAPSHOT.jar"          
           git pull
           ./gradlew clean build -x test
+          cd build/libs
           nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
