--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,6 +19,7 @@ jobs:
         host: ${{ secrets.HOST }} 
         username: ${{ secrets.SSH_USERNAME }}  
         key: ${{ secrets.PRIVATE_KEY }}  
+        port: 8080
         script: |
           cd /home/ubuntu/back-end
           pkill -f "java -jar haru4cut-0.0.1-SNAPSHOT.jar"          
