--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         host: ${{ secrets.HOST }} 
         username: ${{ secrets.SSH_USERNAME }}  
-        key: ${{ secrets.PRIVATE_KEY }}  
-        port: 22
+        key: ${{ secrets.PRIVATE_KEY }} 
+        port: ${{ secrets.PORT }}
         script: |
           cd /home/ubuntu/back-end
           pkill -f "java -jar haru4cut-0.0.1-SNAPSHOT.jar"          
