--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,8 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [main,cicd]
 
 jobs:
   deploy:
@@ -13,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: pathTest
         run : |
-          cd ~/back-end
+          cd ~
           pwd
 
       - uses: actions/checkout@v2 
