--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,23 +9,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: pathTest
-        run : |
-          cd Github
-          pwd
-          ls
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - uses: actions/checkout@v2 
       - name: Build & Deploy
-        env:
-            PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }} 
-            HOSTNAME: ${{ secrets.HOST }} 
-            USER_NAME: ${{ secrets.SSH_USERNAME }} 
-        run: |
-          cd ~/back-end
-          pkill "java -jar haru4cut-0.0.1-SNAPSHOT.jar"          
-          git pull
-          /home/ubuntu/back-end/gradlew clean build -x test
-          cd /home/ubuntu/back-end/build/libs
-          nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd ~/back-end
+            pkill "java -jar haru4cut-0.0.1-SNAPSHOT.jar"          
+            git pull
+            /home/ubuntu/back-end/gradlew clean build -x test
+            cd /home/ubuntu/back-end/build/libs
+            nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
