--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,8 +21,9 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd ~/back-end
-            pkill "java -jar haru4cut-0.0.1-SNAPSHOT.jar"          
+            echo $(pgrep -f 'java -jar haru4cut-0.0.1-SNAPSHOT.jar')
             git pull
             /home/ubuntu/back-end/gradlew clean build -x test
             cd /home/ubuntu/back-end/build/libs
+            pwd
             nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
