--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd ~/back-end
-            pkill -f 'java -jar haru4cut-0.0.1-SNAPSHOT.jar')  # 프로세스 죽이기
+            pkill -f 'java -jar haru4cut-0.0.1-SNAPSHOT.jar'  # 프로세스 죽이기
             git pull
             /home/ubuntu/back-end/gradlew clean build -x test
             cd /home/ubuntu/back-end/build/libs
