--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,7 +22,7 @@ jobs:
           script: |
             cd ~/back-end
             pkill -f 'java -jar haru4cut-0.0.1-SNAPSHOT.jar'  # 프로세스 죽이기
-            git pull
+            git pull origin main
             /home/ubuntu/back-end/gradlew clean build -x test
             cd /home/ubuntu/back-end/build/libs
             nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
