--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,14 +20,5 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd ~/back-end
-            sudo pkill -f 'java -jar haru4cut-0.0.1-SNAPSHOT.jar'  # 프로세스 죽이기
-            git pull origin main
-            /home/ubuntu/back-end/gradlew clean build -x test
-            cd /home/ubuntu/back-end/build/libs
-            sudo nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
-            
-      # 종료 코드가 143인 경우에만 에러를 출력하지 않음
-      - name: Handle exit code
-        if: ${{ failure() && steps.deploy.outputs.exit_code != 143 }}
-        run: exit 1
+            chmod +x ./deploy.sh
+            ./deploy.sh
