--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,18 +14,18 @@ jobs:
 
       - name: Build & Deploy
         uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          port: ${{ secrets.PORT }}
+        env:  
           openai.key : ${{ secrets.OPENAI_KEY }}
           cloud.aws.credentials.accessKey: ${{ secrets.S3_ACCESS_KEY }}
           cloud.aws.credentials.accessKeyProfile: ${{ secrets.S3_ACCESS_PROFILE_KEY }}
           cloud.aws.credentials.secretKey: ${{ secrets.S3_SECRET_KEY }}
           cloud.aws.credentials.secretKeyProfile : ${{ secrets.S3_SECRET_PROFILE_KEY }}
           jwt.secretKey : ${{ secrets.JWT_SECRET_KEY }}
-
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: ${{ secrets.PORT }}
           script: |
             chmod +x ./deploy.sh
             ./deploy.sh
