--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,3 +29,7 @@ jobs:
           script: |
             chmod +x ./deploy.sh
             ./deploy.sh
+            ./gradlew clean build -x test
+            cd /home/ubuntu/back-end/build/libs
+            nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
+
