--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,8 +28,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             chmod +x ./deploy.sh
-            ./deploy.sh
+            cd /home/ubuntu/back-end
             ./gradlew clean build -x test
             cd /home/ubuntu/back-end/build/libs
-            nohup java -jar haru4cut-0.0.1-SNAPSHOT.jar &
-
+            ./deploy.sh
